--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+* {
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.coin-app{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 64px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.coin-text{
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.coin-input{
+ width: 290px;
+ height: 30px;
+ text-align: center;
+ font-size: 20px;
+ background-color: aliceblue;
+ color: black;
+ text-decoration: solid;
+ margin-left: 40px;
 }
+
+.hea{
+  text-align: left;
+  flex-direction: row;
+  display: flex;
+  padding-right: 720px;
+  text-transform: capitalize;
+  font-size: 20px;
+  padding-top: 30px;
+  
+}
+
+.nam{
+  padding-left: 800px;
+  padding-right: 80px;
+}
+.sam{
+  padding-right: 80px;
+}
+.pam{
+  margin-right: 170px;
+}
+.vam{
+  margin-left: -72px;
+  margin-right: 63px;
+  text-align: center;
+}
+.pamc{
+  text-align: center;
+ padding-right: 90px;
+}
+.mak{
+  text-align: center;
+  margin-right: 100px;
+  
+}
+@font-face {
+  font-family: 'SEGA LOGO FONT';
+  font-style: normal;
+  font-weight: normal;
+  src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
+  }
+  .coin-text{
+    font-family: SEGA LOGO FONT;
+    font-size: 30px;
+    font-weight: 200;
+    color: rgb(36, 24, 208);
+  }
